fix wrapping text on ios

--- a/style.css
+++ b/style.css
@@ -94,6 +94,6 @@ form label {
 
 form input {
     display: table-cell;
-    margin-left: 30px;
+    margin-left: 10px;
     margin-bottom: 6px;
 }
